k8s-manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: supplychain-api
spec:
  selector:
    app: supplychain-api
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
  type: ClusterIP
